Initial portfolio launch

--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniyal Ali Dana | AI Developer</title>
+    <style>
+        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; background: #f4f4f4; }
+        header { text-align: center; padding: 50px 0; background: #24292e; color: white; border-radius: 8px; }
+        .content { background: white; padding: 30px; margin-top: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+        h2 { color: #0366d6; border-bottom: 2px solid #eee; padding-bottom: 10px; }
+        .project-card { border-left: 5px solid #0366d6; padding-left: 15px; margin-bottom: 20px; }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Daniyal Ali Dana's Portfolio</h1>
-    <p>AI Student at NUML | Founder of Xentro AI</p>
-    <p>Check back soon for my latest automation projects!</p>
+    <header>
+        <h1>Daniyal Ali Dana</h1>
+        <p>AI Student at NUML | Founder of Xentro AI</p>
+    </header>
+
+    <div class="content">
+        <h2>About Me</h2>
+        <p>I am a 3rd-semester AI student at NUML Islamabad, passionate about building automation tools and machine learning solutions.</p>
+
+        <h2>Projects</h2>
+        <div class="project-card">
+            <h3>Xentro Lead Hunter 360</h3>
+            <p>A B2B lead extraction tool designed to automate data gathering.</p>
+        </div>
+        <div class="project-card">
+            <h3>Java Expense Tracker</h3>
+            <p>A GUI-based application built with Java Swing for personal finance management.</p>
+        </div>
+
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+    </div>
 </body>
 </html>
