--- a/index.html
+++ b/index.html
@@ -3,37 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniyal Ali Dana | AI Developer</title>
+    <title>Daniyal Ali Dana | Portfolio</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; background: #f4f4f4; }
-        header { text-align: center; padding: 50px 0; background: #24292e; color: white; border-radius: 8px; }
-        .content { background: white; padding: 30px; margin-top: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-        h2 { color: #0366d6; border-bottom: 2px solid #eee; padding-bottom: 10px; }
-        .project-card { border-left: 5px solid #0366d6; padding-left: 15px; margin-bottom: 20px; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; color: #333; max-width: 900px; margin: 0 auto; padding: 20px; background-color: #f9f9f9; }
+        header { background: #2c3e50; color: #fff; padding: 3rem 1rem; text-align: center; border-radius: 10px; margin-bottom: 2rem; }
+        .project { background: #fff; border: 1px solid #ddd; padding: 1.5rem; border-radius: 8px; margin-bottom: 1.5rem; transition: transform 0.2s; }
+        .project:hover { transform: translateY(-5px); box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        h2 { color: #2c3e50; border-bottom: 2px solid #3498db; padding-bottom: 10px; }
+        .badge { background: #3498db; color: white; padding: 4px 8px; border-radius: 4px; font-size: 0.8rem; margin-right: 5px; }
     </style>
 </head>
 <body>
     <header>
         <h1>Daniyal Ali Dana</h1>
-        <p>AI Student at NUML | Founder of Xentro AI</p>
+        <p>AI Student at NUML Islamabad | CEO of Xentro AI</p>
     </header>
 
-    <div class="content">
-        <h2>About Me</h2>
-        <p>I am a 3rd-semester AI student at NUML Islamabad, passionate about building automation tools and machine learning solutions.</p>
-
-        <h2>Projects</h2>
-        <div class="project-card">
+    <section>
+        <h2>Featured Projects</h2>
+        
+        <div class="project">
             <h3>Xentro Lead Hunter 360</h3>
-            <p>A B2B lead extraction tool designed to automate data gathering.</p>
-        </div>
-        <div class="project-card">
-            <h3>Java Expense Tracker</h3>
-            <p>A GUI-based application built with Java Swing for personal finance management.</p>
+            <p>A B2B lead generation tool designed for automated data extraction.</p>
+            <span class="badge">Python</span> <span class="badge">Automation</span>
         </div>
 
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-    </div>
+        <div class="project">
+            <h3>Personal Expense Tracker</h3>
+            <p>A Java-based GUI application for managing financial records efficiently.</p>
+            <span class="badge">Java</span> <span class="badge">Swing</span> <span class="badge">OOP</span>
+        </div>
+
+        <div class="project">
+            <h3>AI Invoice Data Extractor</h3>
+            <p>An automated solution for extracting key data points from financial documents.</p>
+            <span class="badge">AI</span> <span class="badge">Python</span>
+        </div>
+    </section>
+
+    <section>
+        <h2>Technical Skills</h2>
+        <p><strong>Languages:</strong> Python, C++, Java (OOP Level), HTML/CSS</p>
+        <p><strong>Systems:</strong> Fedora Linux (XFCE)</p>
+    </section>
 </body>
 </html>
