--- a/index.html
+++ b/index.html
@@ -3,48 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniyal Ali Dana | Portfolio</title>
+    <title>Daniyal Ali Dana | AI Student</title>
     <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; color: #333; max-width: 900px; margin: 0 auto; padding: 20px; background-color: #f9f9f9; }
-        header { background: #2c3e50; color: #fff; padding: 3rem 1rem; text-align: center; border-radius: 10px; margin-bottom: 2rem; }
-        .project { background: #fff; border: 1px solid #ddd; padding: 1.5rem; border-radius: 8px; margin-bottom: 1.5rem; transition: transform 0.2s; }
-        .project:hover { transform: translateY(-5px); box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
-        h2 { color: #2c3e50; border-bottom: 2px solid #3498db; padding-bottom: 10px; }
-        .badge { background: #3498db; color: white; padding: 4px 8px; border-radius: 4px; font-size: 0.8rem; margin-right: 5px; }
+        :root { --primary: #2c3e50; --accent: #3498db; --bg: #ffffff; }
+        body { font-family: 'Inter', sans-serif; line-height: 1.6; color: #333; max-width: 800px; margin: 0 auto; padding: 20px; }
+        header { border-bottom: 2px solid #eee; padding-bottom: 20px; margin-bottom: 30px; }
+        h1 { margin-bottom: 5px; color: var(--primary); }
+        .status-badge { display: inline-block; background: #e1f5fe; color: #01579b; padding: 5px 12px; border-radius: 20px; font-size: 0.85rem; font-weight: bold; }
+        .section { margin-bottom: 40px; }
+        h2 { font-size: 1.2rem; text-transform: uppercase; letter-spacing: 1px; color: var(--accent); }
+        .card { background: #fcfcfc; border: 1px solid #efefef; padding: 20px; border-radius: 8px; margin-top: 10px; }
+        .skill-tag { display: inline-block; background: #eee; padding: 4px 10px; border-radius: 4px; font-size: 0.9rem; margin: 4px; }
     </style>
 </head>
 <body>
+
     <header>
         <h1>Daniyal Ali Dana</h1>
-        <p>AI Student at NUML Islamabad | CEO of Xentro AI</p>
+        <div class="status-badge">Learning AI @ NUML Islamabad</div>
+        <p>Focused on Data Collection, Preprocessing, and Supervised Machine Learning.</p>
     </header>
 
-    <section>
-        <h2>Featured Projects</h2>
-        
-        <div class="project">
-            <h3>Xentro Lead Hunter 360</h3>
-            <p>A B2B lead generation tool designed for automated data extraction.</p>
-            <span class="badge">Python</span> <span class="badge">Automation</span>
-        </div>
+    <div class="section">
+        <h2>About My Journey</h2>
+        <p>I am a 3rd-semester AI student currently exploring the fundamentals of Machine Learning. Rather than claiming expert status, I focus on <strong>learning by doing</strong>—building real projects and solving data problems as I go.</p>
+    </div>
 
-        <div class="project">
-            <h3>Personal Expense Tracker</h3>
-            <p>A Java-based GUI application for managing financial records efficiently.</p>
-            <span class="badge">Java</span> <span class="badge">Swing</span> <span class="badge">OOP</span>
+    <div class="section">
+        <h2>Recent Milestone</h2>
+        <div class="card">
+            <strong>Data Collection for AI Training</strong>
+            <p>Successfully completed a data collection project for a US-based client, delivering structured datasets ready for model training.</p>
         </div>
+    </div>
 
-        <div class="project">
-            <h3>AI Invoice Data Extractor</h3>
-            <p>An automated solution for extracting key data points from financial documents.</p>
-            <span class="badge">AI</span> <span class="badge">Python</span>
+    <div class="section">
+        <h2>Services I Offer</h2>
+        <div class="card">
+            <strong>Data Collection & Scraping</strong>
+            <p>Gathering raw data for AI/ML projects with a focus on accuracy and structure.</p>
+            
+            <strong>Preprocessing & Cleaning</strong>
+            <p>Transforming messy data into clean, usable formats using Python (NumPy/Pandas).</p>
+            <div class="skill-tag">Python</div> <div class="skill-tag">NumPy</div> <div class="skill-tag">Pandas</div>
         </div>
-    </section>
+    </div>
 
-    <section>
-        <h2>Technical Skills</h2>
-        <p><strong>Languages:</strong> Python, C++, Java (OOP Level), HTML/CSS</p>
-        <p><strong>Systems:</strong> Fedora Linux (XFCE)</p>
-    </section>
+    <div class="section">
+        <h2>Learning Progress</h2>
+        <ul>
+            <li>Completed <strong>IBM Machine Learning with Python</strong> (Level 1).</li>
+            <li>Currently studying <strong>Supervised Learning</strong> and ML Algorithms.</li>
+            <li>Comfortable with <strong>Java OOP</strong> and <strong>C++</strong> fundamentals.</li>
+        </ul>
+    </div>
+
 </body>
 </html>
