updated services section with my data collection and preprocessing skills

--- a/index.html
+++ b/index.html
@@ -39,13 +39,20 @@
 
     <div class="section">
         <h2>Services I Offer</h2>
+        
         <div class="card">
-            <strong>Data Collection & Scraping</strong>
-            <p>Gathering raw data for AI/ML projects with a focus on accuracy and structure.</p>
-            
-            <strong>Preprocessing & Cleaning</strong>
-            <p>Transforming messy data into clean, usable formats using Python (NumPy/Pandas).</p>
-            <div class="skill-tag">Python</div> <div class="skill-tag">NumPy</div> <div class="skill-tag">Pandas</div>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <strong>Data Collection & Gathering</strong>
+                <span style="font-size: 0.8rem; color: #27ae60; font-weight: bold;">● Available for Projects</span>
+            </div>
+            <p>I specialize in gathering high-quality, structured datasets for AI training. I recently completed a project for a US client involving large-scale data collection.</p>
+            <div class="skill-tag">Web Scraping</div> <div class="skill-tag">Data Mining</div> <div class="skill-tag">Dataset Formatting</div>
+        </div>
+
+        <div class="card">
+            <strong>Data Preprocessing & Cleaning</strong>
+            <p>Using Python, I transform raw, "messy" data into clean formats ready for Machine Learning algorithms.</p>
+            <div class="skill-tag">NumPy</div> <div class="skill-tag">Pandas</div> <div class="skill-tag">Data Wrangling</div>
         </div>
     </div>
 
