--- a/index.html
+++ b/index.html
@@ -65,5 +65,25 @@
         </ul>
     </div>
 
+    <div class="section">
+        <h2>Let's Connect</h2>
+        <p>I am always looking for new data challenges and opportunities to learn. If you need help with data collection or preprocessing, feel free to reach out.</p>
+        
+        <div class="card" style="display: flex; gap: 20px; flex-wrap: wrap; justify-content: center; text-align: center;">
+            <div style="flex: 1; min-width: 150px;">
+                <strong>Email</strong><br>
+                <a href="mailto:daniyalalidana193@gmail.com" style="color: var(--accent); text-decoration: none;">Send a Message</a>
+            </div>
+            <div style="flex: 1; min-width: 150px;">
+                <strong>LinkedIn</strong><br>
+                <a href="https://linkedin.com/in/daniyalalidana" target="_blank" style="color: var(--accent); text-decoration: none;">View Profile</a>
+            </div>
+            <div style="flex: 1; min-width: 150px;">
+                <strong>GitHub</strong><br>
+                <a href="https://github.com/daniyalalidana" target="_blank" style="color: var(--accent); text-decoration: none;">View Code</a>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
