--- a/index.html
+++ b/index.html
@@ -5,16 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniyal Ali Dana | AI Student</title>
     <style>
-        :root { --primary: #2c3e50; --accent: #3498db; --bg: #ffffff; }
-        body { font-family: 'Inter', sans-serif; line-height: 1.6; color: #333; max-width: 800px; margin: 0 auto; padding: 20px; }
-        header { border-bottom: 2px solid #eee; padding-bottom: 20px; margin-bottom: 30px; }
-        h1 { margin-bottom: 5px; color: var(--primary); }
-        .status-badge { display: inline-block; background: #e1f5fe; color: #01579b; padding: 5px 12px; border-radius: 20px; font-size: 0.85rem; font-weight: bold; }
-        .section { margin-bottom: 40px; }
-        h2 { font-size: 1.2rem; text-transform: uppercase; letter-spacing: 1px; color: var(--accent); }
-        .card { background: #fcfcfc; border: 1px solid #efefef; padding: 20px; border-radius: 8px; margin-top: 10px; }
-        .skill-tag { display: inline-block; background: #eee; padding: 4px 10px; border-radius: 4px; font-size: 0.9rem; margin: 4px; }
-    </style>
+    :root {
+        --primary: #2c3e50;
+        --accent: #3498db;
+        --text: #34495e;
+        --bg: #f8fafc;
+        --white: #ffffff;
+    }
+
+    body {
+        font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+        line-height: 1.7;
+        color: var(--text);
+        background-color: var(--bg);
+        max-width: 850px;
+        margin: 0 auto;
+        padding: 40px 20px;
+    }
+
+    header {
+        text-align: center;
+        padding: 60px 20px;
+        background: linear-gradient(135deg, var(--primary), #34495e);
+        color: var(--white);
+        border-radius: 16px;
+        margin-bottom: 40px;
+        box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+    }
+
+    h1 { margin: 0; font-size: 2.5rem; letter-spacing: -1px; }
+
+    .status-badge {
+        display: inline-block;
+        background: rgba(255,255,255,0.2);
+        backdrop-filter: blur(5px);
+        color: white;
+        padding: 6px 16px;
+        border-radius: 30px;
+        font-size: 0.9rem;
+        margin-top: 15px;
+        border: 1px solid rgba(255,255,255,0.3);
+    }
+
+    h2 {
+        font-size: 1.1rem;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        color: var(--accent);
+        margin-top: 50px;
+        border-left: 4px solid var(--accent);
+        padding-left: 15px;
+    }
+
+    .card {
+        background: var(--white);
+        border: 1px solid #e2e8f0;
+        padding: 30px;
+        border-radius: 12px;
+        margin-top: 20px;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.02);
+        transition: transform 0.2s ease;
+    }
+
+    .card:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 12px 20px rgba(0,0,0,0.05);
+    }
+
+    .skill-tag {
+        display: inline-block;
+        background: #f1f5f9;
+        color: #475569;
+        padding: 5px 14px;
+        border-radius: 6px;
+        font-size: 0.85rem;
+        font-weight: 600;
+        margin: 5px;
+        border: 1px solid #e2e8f0;
+    }
+
+    a.contact-btn {
+        display: inline-block;
+        margin-top: 10px;
+        padding: 10px 20px;
+        background: var(--accent);
+        color: white;
+        text-decoration: none;
+        border-radius: 8px;
+        font-weight: 600;
+        transition: opacity 0.2s;
+    }
+
+    a.contact-btn:hover { opacity: 0.9; }
+</style>
 </head>
 <body>
 
