Add profile picture display

--- a/index.html
+++ b/index.html
@@ -48,22 +48,20 @@
                     <a href="https://github.com/daniyalalidana" target="_blank" title="GitHub">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.upwork.com/freelancers/~YOUR_UPWORK_PROFILE" target="_blank" title="Upwork">
+                    <a href="https://www.upwork.com/freelancers/daniyalalidana" target="_blank" title="Upwork">
                         <i class="fas fa-laptop-code"></i>
                     </a>
                     <a href="https://linkedin.com/in/daniyalalidana" target="_blank" title="LinkedIn">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="mailto:your.email@example.com" title="Email">
+                    <a href="mailto:daniyalalidana193@gmail" title="Email">
                         <i class="fas fa-envelope"></i>
                     </a>
                 </div>
             </div>
             <div class="hero-image">
                 <div class="profile-card">
-                    <div class="profile-placeholder">
-                        <i class="fas fa-user-circle"></i>
-                    </div>
+                    <img src="images/profile.jpg" alt="Daniyal Ali Dana" class="profile-image">
                 </div>
             </div>
         </div>
@@ -507,7 +505,7 @@
                         </div>
                         <div>
                             <h3>Email</h3>
-                            <p><a href="mailto:your.email@example.com">your.email@example.com</a></p>
+                            <p><a href="mailto:daniyalalidana193@gmail.com">daniyalalidana@gmail.com</a></p>
                         </div>
                     </div>
                     
@@ -527,7 +525,7 @@
                         </div>
                         <div>
                             <h3>Upwork</h3>
-                            <p><a href="https://www.upwork.com/freelancers/~YOUR_UPWORK_PROFILE" target="_blank">View Profile</a></p>
+                            <p><a href="https://www.upwork.com/freelancers/daniyalalidana" target="_blank">View Profile</a></p>
                         </div>
                     </div>
                     
@@ -581,7 +579,7 @@
                 <div class="footer-social">
                     <a href="https://github.com/daniyalalidana" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://linkedin.com/in/daniyalalidana" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.upwork.com/freelancers/~YOUR_UPWORK_PROFILE" target="_blank"><i class="fas fa-laptop-code"></i></a>
+                    <a href="https://www.upwork.com/freelancers/daniyalalidana" target="_blank"><i class="fas fa-laptop-code"></i></a>
                 </div>
             </div>
         </div>
