Improve About section with professional design and layout

--- a/index.html
+++ b/index.html
@@ -77,32 +77,85 @@
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
-                <div class="about-text">
-                    <p class="about-intro">
-                        I'm a passionate <strong>3rd semester Artificial Intelligence student</strong> with a strong foundation in Machine Learning and Data Science. My journey in AI has been marked by continuous learning, practical application, and a drive to solve real-world problems.
-                    </p>
-                    <p>
-                        I've completed comprehensive training in <strong>Machine Learning Supervised Learning</strong>, mastering all major algorithms including Linear Regression, Logistic Regression, Decision Trees, Random Forests, SVM, and Neural Networks. My expertise is validated by <strong>four IBM digital certificates</strong> covering AI Fundamentals, Data Analysis with Python, Data Fundamentals, and Machine Learning with Python.
-                    </p>
-                    <p>
-                        Beyond academics, I've gained practical experience through <strong>freelancing on Upwork</strong>, where I've successfully completed projects in data collection for AI models. I actively develop and share ML projects on <strong>GitHub</strong>, contributing to the open-source community while building a portfolio of real-world applications.
-                    </p>
-                    <div class="stats-grid">
-                        <div class="stat-card">
-                            <div class="stat-number">4</div>
-                            <div class="stat-label">IBM Certificates</div>
+                <div class="about-main">
+                    <div class="about-text-primary">
+                        <p class="about-intro">
+                            I'm a passionate <span class="highlight-text">3rd Semester Artificial Intelligence student</span> with a strong foundation in Machine Learning and Data Science. My journey in AI has been marked by continuous learning, practical application, and a drive to solve real-world problems.
+                        </p>
+                    </div>
+                    
+                    <div class="about-grid">
+                        <div class="about-card">
+                            <div class="about-card-icon">
+                                <i class="fas fa-graduation-cap"></i>
+                            </div>
+                            <div class="about-card-content">
+                                <h3>Education & Training</h3>
+                                <p>Completed comprehensive training in <span class="highlight-text">Machine Learning Supervised Learning</span>, mastering all major algorithms including Linear Regression, Logistic Regression, Decision Trees, Random Forests, SVM, and Neural Networks.</p>
+                            </div>
                         </div>
-                        <div class="stat-card">
-                            <div class="stat-number">1+</div>
-                            <div class="stat-label">Upwork Projects</div>
+
+                        <div class="about-card">
+                            <div class="about-card-icon">
+                                <i class="fas fa-certificate"></i>
+                            </div>
+                            <div class="about-card-content">
+                                <h3>Certifications</h3>
+                                <p>Validated expertise through <span class="highlight-text">four IBM digital certificates</span> covering AI Fundamentals, Data Analysis with Python, Data Fundamentals, and Machine Learning with Python.</p>
+                            </div>
                         </div>
-                        <div class="stat-card">
-                            <div class="stat-number">10+</div>
-                            <div class="stat-label">ML Algorithms</div>
+
+                        <div class="about-card">
+                            <div class="about-card-icon">
+                                <i class="fas fa-laptop-code"></i>
+                            </div>
+                            <div class="about-card-content">
+                                <h3>Practical Experience</h3>
+                                <p>Gained real-world experience through <span class="highlight-text">freelancing on Upwork</span>, successfully completing data collection projects for AI models and delivering quality results to clients.</p>
+                            </div>
                         </div>
-                        <div class="stat-card">
-                            <div class="stat-number">6</div>
-                            <div class="stat-label">Month Intensive Training</div>
+
+                        <div class="about-card">
+                            <div class="about-card-icon">
+                                <i class="fab fa-github"></i>
+                            </div>
+                            <div class="about-card-content">
+                                <h3>Open Source</h3>
+                                <p>Actively develop and share ML projects on <span class="highlight-text">GitHub</span>, contributing to the open-source community while building a portfolio of real-world applications.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="stats-container">
+                        <div class="stats-grid">
+                            <div class="stat-card">
+                                <div class="stat-icon">
+                                    <i class="fas fa-certificate"></i>
+                                </div>
+                                <div class="stat-number">4</div>
+                                <div class="stat-label">IBM Certificates</div>
+                            </div>
+                            <div class="stat-card">
+                                <div class="stat-icon">
+                                    <i class="fas fa-briefcase"></i>
+                                </div>
+                                <div class="stat-number">1+</div>
+                                <div class="stat-label">Upwork Projects</div>
+                            </div>
+                            <div class="stat-card">
+                                <div class="stat-icon">
+                                    <i class="fas fa-brain"></i>
+                                </div>
+                                <div class="stat-number">10+</div>
+                                <div class="stat-label">ML Algorithms</div>
+                            </div>
+                            <div class="stat-card">
+                                <div class="stat-icon">
+                                    <i class="fas fa-award"></i>
+                                </div>
+                                <div class="stat-number">6</div>
+                                <div class="stat-label">Month Intensive Training</div>
+                            </div>
                         </div>
                     </div>
                 </div>
