--- a/index.html
+++ b/index.html
@@ -657,6 +657,31 @@
         </div>
     </section>
 
+    <!-- Project Modal -->
+    <div id="projectModal" class="project-modal">
+        <div class="modal-backdrop"></div>
+        <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
+            <button class="modal-close" aria-label="Close modal">
+                <i class="fas fa-times"></i>
+            </button>
+            <div class="modal-header">
+                <div class="modal-icon">
+                    <i class="fas fa-project-diagram"></i>
+                </div>
+                <div>
+                    <h2 id="modalTitle" class="modal-title"></h2>
+                    <p class="modal-type"></p>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="modal-description"></div>
+                <div class="modal-tags"></div>
+                <div class="modal-status"></div>
+                <div class="modal-links"></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
